chore: fix animated text position to be behind the navbar menu

--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -172,6 +172,8 @@
   -webkit-animation: vibrate-1 1s linear infinite both;
   animation: vibrate-1 1s linear infinite both;
   color: white;
+  position: relative;
+  z-index: 0;
 }
 
 /* ----------------------------------------------
